--- a/css/styles.css
+++ b/css/styles.css
@@ -498,29 +498,6 @@ body {
 
 /* Кнопки */
 
-
-.button-footer-submit {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    margin-left: 12px;
-    padding: 10px 28px;
-    width: 200px;
-    height: 50px;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    text-align: center;
-    color: #FFFFFF;
-    background: #2196F3;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    min-width: 200px;
-}
-.button-footer-submit .send {
-    margin-left: 10px;
-}
 .modal-form-button {
     align-self: center;
     width: 200px;
@@ -550,7 +527,7 @@ body {
     display: flex;
     align-items: flex-start;
 }
-.footer-div {
+.footer__div {
     margin-right: 70px;
 }
 .footer__link {
@@ -577,7 +554,8 @@ body {
     line-height: 1.71;
     margin-bottom: 9px;
 }
-.footer__link {
+.footer__contact {
+    text-decoration: none;
     color: #FFFFFF99;
     font-style: normal;
     font-size: 14px;
@@ -587,11 +565,11 @@ body {
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__link--position{
+.footer__contact--position{
     margin-bottom: 0px;
 }
-.footer__link:hover,
-.footer__link:focus { 
+.footer__contact:hover,
+.footer__contact:focus { 
     color: #2196F3;
 }
 .footer__div--position {
@@ -635,10 +613,10 @@ body {
     fill: #FFFFFF;
 }
 
-.form-footer {
+.footer__form {
     display: flex;
 }
-.footer-input {
+.footer__input {
     color: white;
     width: 358px;
     height: 50px;
@@ -649,12 +627,35 @@ body {
     padding-left: 16px;
     padding-bottom: 15px;
 }
-.footer-input::placeholder {
+.footer__input::placeholder {
     color: rgba(255, 255, 255, 0.6);
     font-size: 16px;
     line-height: 1.25;
 }
-/* Модальное окно */
+.footer__button {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin-left: 12px;
+    padding: 10px 28px;
+    width: 200px;
+    height: 50px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: #FFFFFF;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    min-width: 200px;
+}
+.footer__icon--margin {
+    margin-left: 10px;
+
+    /* Модальное окно */
+
 .backdrop {
     position: fixed;
     top: 0;
