Заполняет файлы Sass часть 2

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 $colorWhite: #FFFFFF;
 $colorBlue: #2196F3;
-$colorTitle: #212121:
+$colorTitle: #212121;
 $colorPrimary: #757575;
 $colorBorder: #ECECEC;
 $colorBackground: #F5F4FA;
