--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,3 +1,5 @@
+/* Хэдер */
+
 .header{
     border-bottom: 1px solid $colorBorder;
 }
@@ -13,15 +15,14 @@
 }
 .header__item:not(:last-child) {
     margin-right: 50px;
-
-    &--current::after {
+}
+.header__item--current::after {
         content: "";
         display: block;
     
         height: 4px;
         background: $colorBlue;
         border-radius: 2px;
-    }
 }
 .header__link {
     display: flex;
