--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,11 +2,14 @@
     text-decoration: none;
     margin-right: 93px;
     color: $colorBlue;
-    font-family: &fontLogo;
+    font-family: $fontLogo;
     font-size: 26px;
     line-height: 1.19;
 
     &--accent {
         color: #000000;
     }
+}
+.footer__logo--accent {
+    color: $colorWhite;
 }
