--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -14,13 +14,10 @@
     padding: 0;
     list-style: none;
 }
-.section-portfolio__item--indent:not(:last-child) {
-    margin-right: 8px;
-}
 .section-portfolio__button {
     cursor: pointer;
-    color: var(--title-text-color);
-    background-color: #F5F4FA;
+    color: $colorTitle;
+    background-color: $colorBackground;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -34,12 +31,13 @@
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.section-portfolio__button:hover,
-.section-portfolio__button:focus{
-    background-color: #2196F3;
-    color: #FFFFFF;
+
+    &:hover,
+    &:focus{
+    background-color: $colorBlue;
+    color: $colorWhite;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
 }
 .section-portfolio__list {
     display: flex;
@@ -57,13 +55,15 @@
     margin-left: 30px;
     margin-top: 30px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.section-portfolio__item:hover {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-.section-portfolio__div--position {
-    position: relative;
-    overflow: hidden;
+
+    &--indent:not(:last-child) {
+        margin-right: 8px;
+    }
+
+    &:hover {
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
 }
 .section-portfolio__overlay {
     position: absolute;
@@ -72,7 +72,7 @@
     background: rgba(33, 150, 243, 0.9);
     font-size: 18px;
     line-height: 1.56;
-    color: #FFFFFF;
+    color: $colorWhite;
     width: 100%;
     height: 100%;
     padding: 63px 24px;
@@ -81,25 +81,31 @@
     opacity: 0;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .section-portfolio__item:hover & {
+        transform: translateY(0%);
+        opacity: 1;
+    }  
 }
-.section-portfolio__item:hover .section-portfolio__overlay {
-    transform: translateY(0%);
-    opacity: 1;
-}   
 .section-portfolio__div {
-    border: 1px solid #ECECEC;
+    border: 1px solid  $colorBorder;
     border-top: 0;
     padding: 20px 24px 20px 24px;
+
+    &--position {
+        position: relative;
+        overflow: hidden;
+    }
 }
-.section-portfolio__title{
-    color: var(--title-text-color);
+.section-portfolio__title {
+    color: $colorTitle;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     margin-top: 0;
     margin-bottom: 4px;
 }
-.section-portfolio__text{
+.section-portfolio__text {
     font-size: 16px;
     line-height: 1.87;
     margin-top: 0px;
