--- a/css/main.css
+++ b/css/main.css
@@ -60,9 +60,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: auto;
   padding: 0;
   list-style: none;
+}
+
+.header__item {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header__item:not(:last-child) {
@@ -287,6 +294,7 @@
   text-align: center;
   padding-top: 27px;
   padding-bottom: 27px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
@@ -655,7 +663,7 @@
   margin-bottom: 9px;
 }
 
-.footer__contact {
+.footer__item {
   text-decoration: none;
   color: #FFFFFF99;
   font-style: normal;
@@ -667,12 +675,16 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer__contact--position {
+.footer__item--position {
   margin-bottom: 0px;
 }
 
-.footer__contact:hover, .footer__contact:focus {
+.footer__item:hover, .footer__item:focus {
   color: #2196F3;
+}
+
+.footer__item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .footer__div--position {
@@ -699,10 +711,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.footer__item:not(:last-child) {
-  margin-right: 10px;
 }
 
 .footer__icon {
